--- a/public/assets/css/bootstrap.css
+++ b/public/assets/css/bootstrap.css
@@ -3214,14 +3214,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #007bff;
-  border-color: #007bff;
+  color: #5d87ff;
+  border-color: #5d87ff;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #5d87ff;
+  border-color: #5d87ff;
 }
 
 .btn-outline-primary:focus,
@@ -3807,14 +3807,16 @@ input[type="button"].btn-block {
 .dropdown-item:focus {
   color: #16181b;
   text-decoration: none;
-  background-color: #f8f9fa;
+  /* background-color: #f8f9fa; */
+  background-color: rgba(93, 135, 255, 0.1);
+  color: #5d87ff;
 }
 
 .dropdown-item.active,
 .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #007bff;
+  background-color: #5d87ff;
 }
 
 .dropdown-item.disabled,
@@ -7320,7 +7322,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #007bff !important;
+  background-color:#5d87ff !important;
 }
 
 a.bg-primary:hover,
