--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -20027,7 +20027,7 @@ fieldset:disabled .btn {
 }
 
 .navbar-nav .dropdown-menu .dropdown-item {
-    border-radius: 8px
+    /* border-radius: 8px */
 }
 
 .navbar-nav .hover-dd {
@@ -20769,4 +20769,59 @@ html {
     }
 }
 
+.dp-email{
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    border-bottom: 1px solid lightgray;
+}
+
+.dp-items-top{
+    padding: 10px 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.bia{
+    background: #5d87ff;
+        position: relative;
+    width: 100%;
+    height: 200px;
+    }
+
+.ava>img{
+    position: absolute;
+    top: 230px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border: 3px solid white;
+    object-fit: fill;
+}
+
+.cn-ten{
+    display: flex;
+    justify-content: center;
+    padding-top: 65px;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.btn-cstt{
+    right: 0;
+    position: absolute;
+    margin-right: 45px;
+    margin-top: 15px;
+    background-color: #c2c2c2 !important;
+    color: black !important;
+    border: none !important;
+}
+
+.btn-cstt:hover{
+    background-color: #eae9e9 !important;
+    color: black !important;
+    border: none !important;
+}
 
