--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -20782,18 +20782,18 @@ html {
     flex-direction: column;
 }
 
-.bia{
-    background: #5d87ff;
-        position: relative;
+.bia>img{
+    /* background: #5d87ff; */
+    position: relative;
     width: 100%;
     height: 200px;
     }
 
 .ava>img{
     position: absolute;
-    top: 230px;
-    left: 50%;
-    transform: translateX(-50%);
+    top: 255px;
+    /* left: 15%; */
+    transform: translateX(62%);
     width: 150px;
     height: 150px;
     border-radius: 50%;
@@ -20804,9 +20804,12 @@ html {
 .cn-ten{
     display: flex;
     justify-content: center;
-    padding-top: 65px;
+    padding-top: 20px;
     font-size: 20px;
+    transform: translateX(88%);
+    /* left: 285px; */
     font-weight: 600;
+    position: absolute;
 }
 
 .btn-cstt{
@@ -20823,5 +20826,16 @@ html {
     background-color: #eae9e9 !important;
     color: black !important;
     border: none !important;
+}
+
+.two-columns {
+    display: flex;
+    padding-top: 45px;
+    background: #fff;
+}
+
+.column {
+    flex: 1;
+
 }
 
