--- a/public/assets/css/index-css.css
+++ b/public/assets/css/index-css.css
@@ -72,8 +72,8 @@
     align-items: center;
     justify-content: center;
     color: #000;
-    border-left: 1px solid #ef5c2c;
-    border-right: 1px solid #ef5c2c;
+    border-left: 2px solid #ef5c2c;
+    border-right: 2px solid #ef5c2c;
     margin: -10px 0;
     padding: 0 10px;
     font-weight: 600;
@@ -201,4 +201,24 @@
 .footer{
     /* background: #003285; */
     height: 200px;
+}
+
+.tt-lh{
+    background: #003285;
+    flex: 2;
+    background: #003285;
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.tt-ll{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    margin: 50px;
 }
