--- a/public/assets/css/index-css.css
+++ b/public/assets/css/index-css.css
@@ -109,7 +109,7 @@
 
 .ttnb{
     display: flex;
-    gap: 15px;
+    gap: 20px;
     margin-top: 15px;
     margin-bottom: 20px;
 }
@@ -122,17 +122,25 @@
     font-size: 13px;
     font-weight: 600;
     text-align: justify;
-    padding-right: 20px;
+    padding-right: 30px;
     padding-top: 5px;
 }
 
 .btn-xemthem{
-    font-size: 12px;
+    font-size: 13px;
     color: #ef5c2c;
-    font-weight: 500;
+    font-weight: 600;
     margin-top: 10px;
-    text-align: end;
+    /* text-align: end; */
+    text-decoration: none;
     margin-right: 20px;
+    text-align: end;
+}
+
+.td-ngay{
+    font-size: 13px;
+    margin-top: 10px;
+    color: gray;
 }
 
 
