--- a/public/assets/css/index-css.css
+++ b/public/assets/css/index-css.css
@@ -79,46 +79,46 @@
     font-weight: 600;
 }
 
-.ct{
+.ct {
     display: flex;
     margin-top: 60px;
     gap: 25px;
 }
 
-.ct-left{
+.ct-left {
     /* background: #c9c9c9; */
     height: auto;
     flex: 2;
 }
 
-.ct-right{
+.ct-right {
 
     height: 50px;
     flex: 1;
 }
 
-.ct-intro{
+.ct-intro {
     margin-left: 15px;
 }
 
-.ct-nd{
+.ct-nd {
     display: flex;
     flex-direction: column;
     margin-top: 15px;
 }
 
-.ttnb{
+.ttnb {
     display: flex;
     gap: 20px;
     margin-top: 15px;
     margin-bottom: 20px;
 }
 
-.ct-tt{
+.ct-tt {
     padding-right: 7px;
 }
 
-.td-ttnb{
+.td-ttnb {
     font-size: 13px;
     font-weight: 600;
     text-align: justify;
@@ -126,7 +126,7 @@
     padding-top: 5px;
 }
 
-.btn-xemthem{
+.btn-xemthem {
     font-size: 13px;
     color: #ef5c2c;
     font-weight: 600;
@@ -137,7 +137,7 @@
     text-align: end;
 }
 
-.td-ngay{
+.td-ngay {
     font-size: 13px;
     margin-top: 10px;
     color: gray;
@@ -200,18 +200,18 @@
     background-color: #f0f0f0;
 }
 
-.menu-option{
+.menu-option {
     width: 100%;
     background: #ececec;
     height: 100px;
 }
 
-.footer{
+.footer {
     /* background: #003285; */
     height: 200px;
 }
 
-.tt-lh{
+.tt-lh {
     background: #003285;
     flex: 2;
     background: #003285;
@@ -222,11 +222,64 @@
     justify-content: center;
 }
 
-.tt-ll{
+.tt-ll {
     display: flex;
     flex-direction: column;
     gap: 10px;
     align-items: center;
     justify-content: center;
     margin: 50px;
+}
+
+.tt-left {
+    height: auto;
+    flex: 1;
+    margin-top: 75px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dropdown {
+    margin-top: 60px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid lightgray;
+}
+
+.dd-top {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 125px;
+}
+
+.dropdown-button {
+    border: none;
+    background: none;
+    font-size: 17px;
+}
+
+.dropdown-content {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin-top: 15px;
+    font-size: 15px;
+    margin-left: 5px;
+}
+
+input[type="checkbox"] {
+    accent-color: #ef5c2c;
+    width: 10px;
+    height: 10px;
+    transform: scale(1.5);
+    margin-right: 10px;
+}
+
+.chevron-right {
+    display: block;
+}
+
+.chevron-down {
+    display: none;
 }
