--- a/public/assets/css/bootstrap.css
+++ b/public/assets/css/bootstrap.css
@@ -2437,7 +2437,7 @@ select.form-control:focus::-ms-value {
 }
 
 .form-control-sm {
-  height: calc(1.5em + 0.5rem + 2px);
+  /* height: calc(1.5em + 0.5rem + 2px); */
   padding: 0.25rem 0.5rem;
   font-size: 0.875rem;
   line-height: 1.5;
