--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -20730,6 +20730,8 @@ html {
     justify-content: center;
     padding: 10px;
     border-bottom: 1px solid lightgray;
+    flex-direction: column;
+    align-items: center;
 }
 
 .dp-items-top {
